mvg feedback